--- a/Pathfindings/index.html
+++ b/Pathfindings/index.html
@@ -16,6 +16,7 @@
         <button id="StartNodeBuilder" , class="BuilderButtons">Start</button>
         <button id="EndNodeBuilder" class="BuilderButtons">End</button>
         <button id="WallNodeBuilder" class="BuilderButtons">Wall</button>
+        <button id="StartPathfinding" class="BuilderButtons">Start</button>
     </div>
 
     <script src="Main.js"></script>
