--- a/Pathfindings/index.html
+++ b/Pathfindings/index.html
@@ -17,6 +17,8 @@
         <button id="EndNodeBuilder" class="BuilderButtons">End</button>
         <button id="WallNodeBuilder" class="BuilderButtons">Wall</button>
         <button id="StartPathfinding" class="BuilderButtons">Start</button>
+        <button id="ResetGrid" class="BuilderButtons">Reset</button>
+
     </div>
 
     <script src="Main.js"></script>
