--- a/Pathfindings/index.html
+++ b/Pathfindings/index.html
@@ -18,18 +18,24 @@
         <button id="WallNodeBuilder" class="BuilderButtons">Wall</button>
         <button id="StartPathfinding" class="BuilderButtons">Start</button>
         <button id="ResetGridButton" class="BuilderButtons">Reset</button>
+        <button id="StartMazeGen" class="BuilderButtons">Generate<br>Maze</button>
+
         <select name="Algorithms" id="Algorithms">
             <option value="BreadthWidthSearch">BreadthWidthSearch</option>
             <option value="A*">A*</option>
             <option value="GreedyBestFirstSearch">GreedyBestFirstSearch</option>
-            <option value="Dijkstra">Dijkstra</option>
+            </select>
+
+        <select name="MazeAlgorithms" id="MazeAlgorithms">
+            <option value="DFS">DFS</option>
         </select>
 
         <div id="Sliders">
+
             <label for="Speed">Speed</label>
             <input class="Slider" type="range" id="Speed" name="Speed" min="0" max="100" value="50">
             <label for="GridSize">GridSize</label>
-            <input class="Slider" type="range" id = "GridSize" name="GridSize" min="1" max="4" value="2">
+            <input class="Slider" type="range" id = "GridSize" name="GridSize" min="1" max="64" value="1">
             
         </div>
         
