--- a/Pathfindings/index.html
+++ b/Pathfindings/index.html
@@ -27,7 +27,9 @@
             </select>
 
         <select name="MazeAlgorithms" id="MazeAlgorithms">
-            <option value="DFS">DFS</option>
+            <option value="DFSMaze">DFS</option>
+            <option value="PrimsMaze">PrimsMaze</option>
+            <option value="GrowingTree">GrowingTree</option>
         </select>
 
         <div id="Sliders">
